test/compile-fail/resolution/type-existence/bound-is-not-trait/top.rhdl
struct X {}
fn a<T: X>() {}
